--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,14 @@
 @tailwind base; @tailwind components; @tailwind utilities;
+
+@font-face {
+  font-family: "Switzer";  /* Must match Tailwind config */
+  src: url("/fonts/Switzer-Medium.woff2") format("woff2");
+  font-weight: 500;  /* Medium */
+}
+
+@font-face {
+  font-family: 'ClashDisplay';
+  src: url('/fonts/ClashDisplay-Light.woff2') format('woff2');
+  font-weight: 300; /* Light weight */
+  font-style: normal;
+}
